k8s/networking/nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-nlb
  namespace: user-management
  labels:
    app: user-management
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: user-mgmt-nlb
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    
    # HTTPS 配置 - 使用 ACM 证书
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:319998871902:certificate/5237ec0b-cd06-407f-b4b6-0820ee3406d6"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http" #表示后端Pod 使用 HTTP
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
spec:
  type: LoadBalancer
  selector:
    app: user-management-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
